Chapter 3 draft complete

--- a/fig_MSOEnet.tex
+++ b/fig_MSOEnet.tex
@@ -3,7 +3,7 @@
     \epsfig{file=MSOEnet.pdf, width = \textwidth}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamics stream ConvNet.]{Dynamics stream ConvNet. The ConvNet is based on a
+\caption[Dynamics stream ConvNet]{Dynamics stream ConvNet. The ConvNet is based on a
 spacetime-oriented energy model
 \cite{derpanis2012spacetime, simoncelli1998} and is trained
 for optical flow prediction.
