--- a/fig_overallarchitecture.tex
+++ b/fig_overallarchitecture.tex
@@ -3,7 +3,7 @@
     \epsfig{file=overallarchitecture.pdf, width = \textwidth}
 \end{center}
 \vspace{-0.45cm}
-\caption[Two-stream dynamic texture generation.]{Two-stream dynamic texture generation.
+\caption[Two-stream dynamic texture generation]{Two-stream dynamic texture generation.
 Two sets of Gram matrices represent a dynamic texture's appearance and 
 dynamics.
 Matching these statistics allows for the generation of novel
