--- a/thesis.tex
+++ b/thesis.tex
@@ -17,6 +17,7 @@
 
 % Include other packages here, before hyperref.
 \usepackage{subcaption}
+\usepackage{animate}
 
 % If you comment hyperref and then uncomment it, you should delete
 % egpaper.aux before re-running latex.  (Or just hit 'q' on the first latex
