--- a/fig_failures.tex
+++ b/fig_failures.tex
@@ -1,17 +1,23 @@
 \begin{figure}[t]
 \begin{center}
-\begin{tabular}{ >{\centering\arraybackslash} m{0.55in} || >{\centering\arraybackslash} m{3.50in} }
-{\footnotesize \texttt{escalator}\break(original)} & 
-\showtextureshort{escalator/frame_} \\
+\begin{tabular}{ >{\centering\arraybackslash} m{0.16\textwidth} || >{\centering\arraybackslash} m{0.80\textwidth} }
+{\footnotesize \path{escalator}\break(original)} & 
+\showtexture{escalator/frame_} \\
 \hline
-{\footnotesize \texttt{escalator}\break(synthesized)} & 
-\showtextureshort{escalator_output/frame_} \\
+{\footnotesize \path{escalator}\break(synthesized)} & 
+\showtexture{escalator_output/frame_} \\
 \hline \hline
-{\footnotesize \texttt{flag}\break(original)} &
-\showtextureshort{flag/frame_} \\
+{\footnotesize \path{flag}\break(original)} &
+\showtexture{flag/frame_} \\
 \hline
-{\footnotesize \texttt{flag}\break(synthesized)} &
-\showtextureshort{flag_output/frame_} \\
+{\footnotesize \path{flag}\break(synthesized)} &
+\showtexture{flag_output/frame_} \\
+\hline \hline
+{\footnotesize \path{cranberries}\break(original)} &
+\showtexture{cranberries/frame_} \\
+\hline
+{\footnotesize \path{cranberries}\break(synthesized)} &
+\showtexture{cranberries_output/frame_} \\
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
