--- a/fig_motiontransfer.tex
+++ b/fig_motiontransfer.tex
@@ -1,14 +1,14 @@
 \begin{figure}[t]
 \begin{center}
-\begin{tabular}{ >{\centering\arraybackslash} m{0.55in} || >{\centering\arraybackslash} m{3.50in} }
+\begin{tabular}{ >{\centering\arraybackslash} m{0.16\textwidth} || >{\centering\arraybackslash} m{0.80\textwidth} }
 appearance target &
 synthesized output \\
 \hline \hline
 \vspace{0.1cm}\showtexframe{water_img.jpeg} &
-\showtextureshort{water_4_to_water_img_output/frame_} \\
+\showtexture{water_4_to_water_img_output/frame_} \\
 \hline
 \vspace{0.1cm}\showtexframe{fire_paint.jpeg} &
-\showtextureshort{fireplace_1_to_fire_paint_output/frame_} \\
+\showtexture{fireplace_1_to_fire_paint_output/frame_} \\
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
@@ -16,10 +16,10 @@ synthesized output \\
 (top row) 
 Appearance of still water was
 used with the dynamics of a different water dynamic texture
-(\texttt{water\_4}).
+(\path{water_4}).
 (bottom row) 
 The appearance of a painting of fire was used
-with the dynamics of a real fire (\texttt{fireplace\_1}).
+with the dynamics of a real fire (\path{fireplace_1}).
 Animated results and additional examples are available in
 the supplemental material.} 
 \label{fig:motiontransfer}
