--- a/fig_successes.tex
+++ b/fig_successes.tex
@@ -1,44 +1,43 @@
 \begin{figure*}[t]
 \begin{center}
-\begin{tabular}{ >{\centering\arraybackslash} m{0.74in} || >{\centering\arraybackslash} m{5.2in} }
+\begin{tabular}{ >{\centering\arraybackslash} m{0.16\textwidth} || >{\centering\arraybackslash} m{0.80\textwidth} }
 
-{\footnotesize \texttt{fireplace\_1}\break(original)} &
+{\footnotesize \path{fireplace_1}\break(original)} &
 \showtexture{fireplace_1/frame_} \\
 \hline
-{\footnotesize \texttt{fireplace\_1}\break(synthesized)} &
+{\footnotesize \path{fireplace_1}\break(synthesized)} &
 \showtexture{fireplace_1_output/frame_} \\
 
 \hline \hline
-{\footnotesize \texttt{lava}\break(original)} &
+{\footnotesize \path{lava}\break(original)} &
 \showtexture{lava/frame_} \\
 \hline
-{\footnotesize \texttt{lava}\break(synthesized)} &
+{\footnotesize \path{lava}\break(synthesized)} &
 \showtexture{lava_output/frame_} \\
 
 \hline \hline
-{\footnotesize \texttt{smoke\_1}\break(original)} &
+{\footnotesize \path{smoke_1}\break(original)} &
 \showtexture{smoke_1/frame_} \\
 \hline
-{\footnotesize \texttt{smoke\_1}\break(synthesized)} &
+{\footnotesize \path{smoke_1}\break(synthesized)} &
 \showtexture{smoke_1_output/frame_} \\
 
 \hline \hline
-{\footnotesize \texttt{underwater}\break\texttt{vegetation\_1}\break(original)} &
+{\footnotesize \path{underwater_vegetation_1}\break(original)} &
 \showtexture{underwater_vegetation/frame_} \\
 \hline
-{\footnotesize \texttt{underwater}\break\texttt{vegetation\_1}\break (synthesized)} &
+{\footnotesize \path{underwater_vegetation_1}\break (synthesized)} &
 \showtexture{underwater_vegetation_output/frame_} \\
 
 \hline \hline
-{\footnotesize \texttt{water\_3}\break(original)} & 
+{\footnotesize \path{water_3}\break(original)} & 
 \showtexture{water_3/frame_} \\
 \hline
-{\footnotesize \texttt{water\_3}\break(synthesized)} & 
+{\footnotesize \path{water_3}\break(synthesized)} & 
 \showtexture{water_3_output/frame_} \\
 \end{tabular}
 \end{center}
 \vspace{-0.45cm}
-\caption[Dynamic texture synthesis success examples.]{Dynamic texture synthesis success examples. Names correspond
-to files in the supplemental material.}
+\caption[Dynamic texture synthesis success examples.]{Dynamic texture synthesis success examples. Names correspond to files in the supplemental material.}
  \label{fig:successes}
 \end{figure*}
