--- a/introduction.tex
+++ b/introduction.tex
@@ -59,6 +59,7 @@ This work extends the ConvNet model of Gatys \etal \cite{gatys2016image} for tex
 samples based on a single exemplar through the use of ConvNets.
 
 \section{Outline of thesis}
+\todomatthew{provide chapter-by-chapter outline}
 
 Many common dynamic textures are naturally described by the ensemble of 
 appearance and dynamics (\ie, spatial and temporal pattern variation) of their 
