Early draft of Chapter 4 complete

--- a/evaluation.tex
+++ b/evaluation.tex
@@ -111,9 +111,11 @@ has factored appearance and dynamics, as desired.
 
 \subsection{Incremental texture synthesis}
 
-Some example dynamic textures synthesized incrementally, as described in Sec.\ \ref{sec:incremental_synthesis}, are shown in Fig.\ \ref{fig:incremental_synthesis}. \todomatthew{include figure of results}
-The resulting textures are perceptually indistinguishable from those
-synthesized with the batch process. Included in the supplemental material are synthesized sequences as long as 122 frames (using 11 frame subsequences) with no observed divergence or degradation.
+Dynamic textures synthesized incrementally, as described in Sec.\
+\ref{sec:incremental_synthesis}, are included in the supplemental.
+Sequences as long as 122 frames (using 11 frame subsequences) were synthesized
+with no observed divergence or degradation. The resulting textures are 
+perceptually indistinguishable from those synthesized with the batch process. \todomatthew{elaborate?}
 
 \subsection{Temporally-endless texture synthesis}
 
@@ -121,7 +123,8 @@ An example of a synthesized temporally-endless dynamic texture is shown in
 Fig.\ \ref{fig:temporally_endless_synthesis}. As described in Sec.\ 
 \ref{sec:temporally_endless_synthesis}, the dynamic texture appears
 temporally endless, \ie, there is no explicit beginning or end.
-\todomatthew{provide figure showing how it works}
+
+\input{fig_temporally_endless_synthesis}
 
 \subsection{Dynamics style transfer}
 
