--- a/technical_approach.tex
+++ b/technical_approach.tex
@@ -325,8 +325,10 @@ sequence objective as well as a form of autoregression.
 The flexibility of this framework allows other texture generation
 problems to be handled simply by altering the 
 initialization of frames and controlling which
-frames or frame regions are updated.
-\todomatthew{provide figure showing how it works}
+frames or frame regions are updated. Fig.\ \ref{fig:incremental_synthesis}
+shows a visualization of the incremental texture synthesis process.
+
+\input{fig_incremental_synthesis}
 
 \subsection{Temporally-endless texture synthesis}\label{sec:temporally_endless_synthesis}
 
